it-tools-1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-toolsy-1
  namespace: it-tools-1
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: it-tools-1
  template:
    metadata:
      labels:
        app: it-tools-1
    spec:
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      containers:
        - name: it-toolsy
          image: ghcr.io/sharevb/it-tools:stable
          ports:
          - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "400m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools-1
  namespace: it-tools-1
spec:
  type: ClusterIP
  selector:
    app: it-tools-1
  ports:
  - port: 80
    targetPort: 8080
