it-tools-1/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-1
  namespace: it-tools-1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`it-tools.pimonlab.xyz`)
      priority: 10
      services:
        - name: it-tools-1
          namespace: it-tools-1
          port: 80
  tls:
    secretName: it-tools-1-ts-secret
